--- a/index.html
+++ b/index.html
@@ -428,10 +428,117 @@
           </div>
         </div>
       </div>
+       <!-- Team Section -->
+       <div class="team container my-16 mx-auto">
+        <div class="team-container brightness-50" style="background-image: url(images/team.png);">
+          <div class="contents text-white text-center">
+            <div class="team-content max-w-2xl mx-auto py-16">
+              <h2 class="text-5xl mb-3 pt-10 font-extrabold">Meet the team section</h2>
+              <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <div class="team-content pb-16 flex justify-between">
+              <div class="card bg-transparent w-96 bg-base-100">
+                <figure><img src="images/member1.png" alt="Person 1" /></figure>
+                <div class="card-body">
+                  <h2 class="text-3xl text-center">Awlad Hossain</h2>
+                  <p>Fruits Expert</p>
+                </div>
+              </div>
+              <div class="card bg-transparent w-96 bg-base-100">
+                <figure><img src="images/member2.png" alt="Person 2" /></figure>
+                <div class="card-body">
+                  <h2 class="text-3xl text-center">Safia Chowdhury</h2>
+                  <p>Fruits Expert</p>
+                </div>
+              </div>
+              <div class="card bg-transparent w-96 bg-base-100">
+                <figure><img src="images/member3.png" alt="Person 3" /></figure>
+                <div class="card-body">
+                  <h2 class="text-3xl text-center">Rokib Hossain</h2>
+                  <p>Fruits Expert</p>
+                </div>
+              </div>
+              <div class="card bg-transparent w-96 bg-base-100">
+                <figure><img src="images/member4.png" alt="Person 4" /></figure>
+                <div class="card-body">
+                  <h2 class="text-3xl text-center">Chaity</h2>
+                  <p>Fruits Expert</p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Why choose us -->
+      <div class="why-choose container mx-auto">
+        <div class="why-content text-center max-w-2xl mx-auto py-16">
+          <h2 class="text-5xl font-extrabold text-[#121212] mb-3">Why Choose Us</h2>
+          <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
+      </div>
+      <div class="dedicated-team mb-10 flex justify-between container mx-auto">
+        <div class="sec-1">
+          <div class="term mb-10 max-w-sm">
+            <h5 class="text-2xl font-extrabold mb-2">Dedicated Team</h5>
+            <hr class="w-1/4 mb-4 ">
+            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+          </div>
+          <div class="term mb-10 max-w-sm">
+            <h5 class="text-2xl font-extrabold mb-2">Fresh is Best</h5>
+            <hr class="w-1/4 mb-4 ">
+            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+          </div>
+          <div class="term mb-10 max-w-sm">
+            <h5 class="text-2xl font-extrabold mb-2">Gift Certificates</h5>
+            <hr class="w-1/4 mb-4 ">
+            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+          </div>
+        </div>
+        <div class="sec-2">
+          <img src="images/whychoose1.png" alt="">
+        </div>
+        <div class="sec-3 text-right">
+          <div class="term mb-10 max-w-sm">
+            <h5 class="text-2xl font-extrabold mb-2">Dedicated Team</h5>
+            <hr class="w-1/4 mb-4 ">
+            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+          </div>
+          <div class="term mb-10 max-w-sm">
+            <h5 class="text-2xl font-extrabold mb-2">Fresh is Best</h5>
+            <hr class="w-1/4 mb-4 ">
+            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+          </div>
+          <div class="term mb-10 max-w-sm">
+            <h5 class="text-2xl font-extrabold mb-2">Gift Certificates</h5>
+            <hr class="w-1/4 mb-4 ">
+            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+          </div>
+        </div>
+      </div>
 
     
     </main>
-    <footer>
+    <footer class="bg-black py-36 text-center">
+      <div class="footer-title flex justify-center align-middle gap-4">
+        <div class="footer-img">
+          <img src="images/logo.png" alt="">
+        </div>
+        <div class="footer-text">
+          <h4 class="text-4xl text-white">Fruit Burst</h4>
+        </div>
+      </div>
+      <nav  class="mt-10">
+        <ul class="flex justify-center gap-10 text-white">
+          <li>Home</li>
+          <li>About Us</li>
+          <li>Shop</li>
+          <li>All Fruits</li>
+          <li>Support</li>
+          <li>My Account</li>
+        </ul>
+      </nav>
 
     </footer>
 </body>
