--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>B8A3-fruit-brust</title>
     <!-- DaisyUI CDN link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.3/dist/full.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     
 </head>
